--- a/merge_ini/test_second.ini
+++ b/merge_ini/test_second.ini
@@ -7,3 +7,11 @@ username=ftpuser
 [pop3]
 port=8043
 username=pop3user
+
+[TELNET]
+port=8033
+username=telnetuser
+
+[SMTP]
+port=8013
+username=smtpuser
